Updated Content of main page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
           <a href="mailto:name@email.com">kasim_butt@hotmail.com</a>
         </div>
         <p class="lead mb-5">
-          I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+          TODO:
+          Define your professional role here. What do you do?
+
+          I work closely with my clients to build rapport which ensures I am able to complete
+          projects on time and as required by the client.
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/kasim-butt-56741b152/">
@@ -127,7 +131,32 @@
             <h3 class="mb-0">De Montfort University</h3>
             <div class="subheading mb-3">Bachelor of Computer Science</div>
             <div>First Class (Hons)</div>
-            <p> During my time at university: </p>
+            <p>
+              In my 3 years at university, I had the opportunity to learn a variety of subjects which strengthened my understanding of core computing knowledge. My notable subjects include:
+              <li>
+                Information Systems Strategy and Services
+              </li>
+              <li>
+                Software Development Methods
+              </li>
+              <li>
+                Object-Oriented Programming
+              </li>
+              <li> 
+                Front-End Web Development
+              </li>
+              <li> 
+                Project Management and Research Methodologies
+              </li>
+              <li>
+                Penetration Testing
+              </li>
+              <li>
+                Networking Protocols
+              </li>
+              <br>
+              Alongside my studies, I was able to partake in many clubs which allowed me to connect with people from all walks of life and this understanding of other people has enabled me to better connect with people and understand different view points rather easily.
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary"> Septemebr 2015 - May 2018</span>
@@ -140,7 +169,10 @@
             <div class="subheading mb-3">Information Technology</div>
             <div>Distinction</div>
 
-            <p>During my time at College: I </p>
+            <p>During my time in college, I built a passion for working with computers and learnig about project management due to my involvement in several projects in college. As I was the team leader in several of these projects, I decided it was important for me to learn how to manage projects successfully. 
+            <br>
+            During college, I was also able to understand the importance of Public Service and how vital it is for each indiviudal to contribute to the society. Ever since college, I have been volunteering and contributing to the local community whenever possible through my skills. 
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2012 - May 2015</span>
@@ -164,7 +196,7 @@
           <li class="list-inline-item">
             <i class="fab fa-css3-alt"></i>
           </li>
-          
+
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
@@ -191,10 +223,11 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>
-          There are many activites I take part in to relax myself. These activites include things such as keeping fit by going out and playing football weekly, playing competitive tennis in the local park and being a key member of a basketball team. I am also a former member of the Leicester Warriors Basketball Team. 
+          There are many activites I take part in to relax myself. These activites include things such as keeping fit by going out and playing football weekly, playing competitive tennis in the local park and being a key member of a basketball team. I am also a former member of the Leicester Warriors Basketball Team.
+          <br>
           Apart from my sporting activites, I love travelling to new places, learning about new cultures and making connections with people all over the world. So far I have travelled to Albania, Bosnia, Pakistan, Turkey, UAE and the USA. I feel travelling is a key part of me as it has given me experiences I would not have gained otherwise and it has also given me the ability to understand how people from different cultures think and how to connect with them.
-          <br> 
-          I as
+          <br>
+          I also contribute to the local community by being an active member of the local community where we help mostly adults use technology. I have helped elderly adults who want to learn how to pay bills online, how to use online banking amongst many other things.
         </p>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and comedy genre movies and television shows. I also spend a large amount of my free time exploring the latest technology advancements in the technology world.</p>
       </div>
@@ -209,6 +242,11 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Duke of Edinburgh Award</li>
+        </ul>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Faculty Award IT Pathway</li>
         </ul>
       </div>
     </section>
