--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Kasim
           <span class="text-primary">Butt</span>
         </h1>
-        <div class="subheading mb-5">Leicester · United Kingdom · (+44) 7927 211677 ·
+        <div class="subheading mb-5">Leicester · United Kingdom · (Mobile) ·
           <a href="mailto:name@email.com">kasim_butt@hotmail.com</a>
         </div>
         <p class="lead mb-5">
